--- a/UsuariosGit/app/src/main/res/menu/detail.xml
+++ b/UsuariosGit/app/src/main/res/menu/detail.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".controller.DetailActivity">
     <item
-        android:id="@+id/action_shares"
+        android:id="@+id/action_share"
         android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
         android:title="Share" app:showAsAction="always"
 
