--- a/UsuariosGit/app/src/main/res/layout/row_user.xml
+++ b/UsuariosGit/app/src/main/res/layout/row_user.xml
@@ -15,13 +15,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/cover"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:scaleType="fitXY" />
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#401A34"
+            />
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
